feat: add metadata & improve SEO

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Exalted Kingdom - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Exalted Kingdom</title>
+    <meta
+      name="description"
+      content="The website for the Exalted Kingdom Minecraft Factions server! Join now at factions.exalted-kingdom.com!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://exalted-kingdom.com/" />
+    <meta property="og:title" content="Exalted Kingdom - Home" />
+    <meta
+      property="og:description"
+      content="The website for the Exalted Kingdom Minecraft Factions server! Join now at factions.exalted-kingdom.com!"
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/logo-nobg-medium.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://exalted-kingdom.com/" />
+    <meta property="twitter:title" content="Exalted Kingdom - Home" />
+    <meta
+      property="twitter:description"
+      content="The website for the Exalted Kingdom Minecraft Factions server! Join now at factions.exalted-kingdom.com!"
+    />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/logo-nobg-medium.png"
+    />
   </head>
   <body>
     <div id="root"></div>
