fix: properly display image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       property="og:description"
       content="The website for the Exalted Kingdom Minecraft Factions server! Join now at factions.exalted-kingdom.com!"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/logo-nobg-medium.png" />
+    <meta
+      property="og:image"
+      content="https://exalted-kingdom.com/logo-nobg-medium.png"
+    />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -30,7 +33,7 @@
     />
     <meta
       property="twitter:image"
-      content="%PUBLIC_URL%/logo-nobg-medium.png"
+      content="https://exalted-kingdom.com/logo-nobg-medium.png"
     />
   </head>
   <body>
